fixed some names, added didn't get to note

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eel-snake",
+  "name": "ItsElectric",
   "version": "0.1.0",
   "description": "Phaser mini-game – free-movement snake",
   "type": "module",
